@@ -1,3 +1,14 @@
+2018-08-28  Eric Carlson  <eric.carlson@apple.com>
+
+        Revert changes to RealtimeMediaSource.cpp made in r235086
+        https://bugs.webkit.org/show_bug.cgi?id=189046
+        <rdar://problem/43794875>
+
+        Unreviewed, reverting an accidental change.
+
+        * platform/mediastream/RealtimeMediaSource.cpp:
+        (WebCore::RealtimeMediaSource::supportsSizeAndFrameRate): 
+
 2018-08-28  Alejandro G. Castro  <alex@igalia.com>
 
         Fix gcc compilation warnings after r235230
